WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306890
REGRESSION (
305692@main
): [WK1] ASSERTION FAILED: Constant crash under PlatformCALayerCocoa::shadowPath() on multiple tests
https://bugs.webkit.org/show_bug.cgi?id=306890
Summary
REGRESSION (305692@main): [WK1] ASSERTION FAILED: Constant crash under Platfo...
Diego De La Toba
Reported
2026-02-03 11:13:57 PST
css3/filters/backdrop/backdrop-filter-with-reflection.html is a constant crash on MacOS WK1 Sequoia-TahoeA. HISTORY:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&test=compositing%2Freflections%2Fdirect-image-object-fit-reflected.html&test=css3%2Ffilters%2Fbackdrop%2Fbackdrop-filter-with-reflection.html&test=http%2Ftests%2Ffetch%2Fkeepalive-fetch-2.html
BUILD URL:
https://build.webkit.org/#/builders/1709/builds/1234
REPRODUCTION: Reproduced on macOS Tahoe with the following: run-webkit-tests --release -1 --force --no-retry --iterations 100 css3/filters/backdrop/backdrop-filter-with-reflection.html I am going to mark expectations as pass fail while this pends investigation.
Attachments
Crash log
(28.41 KB, text/plain)
2026-02-03 11:59 PST
,
Abrar Rahman Protyasha
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-03 11:14:04 PST
<
rdar://problem/169548155
>
Abrar Rahman Protyasha
Comment 2
2026-02-03 11:59:03 PST
Created
attachment 478237
[details]
Crash log I've extricated the crash log from the failing test run.
Abrar Rahman Protyasha
Comment 3
2026-02-03 11:59:43 PST
Indeed, crashing under `WebCore::PlatformCALayerCocoa::shadowPath()` suggests this is a direct fallout from
305692@main
.
Abrar Rahman Protyasha
Comment 4
2026-02-03 11:59:56 PST
This is also the same crash seen in
https://bugs.webkit.org/show_bug.cgi?id=306894
.
Abrar Rahman Protyasha
Comment 5
2026-02-03 12:01:12 PST
***
Bug 306894
has been marked as a duplicate of this bug. ***
Abrar Rahman Protyasha
Comment 6
2026-02-03 12:03:03 PST
The following tests are affected: css3/filters/backdrop/backdrop-filter-with-reflection.html compositing/reflections/direct-image-object-fit-reflected.html
Abrar Rahman Protyasha
Comment 7
2026-02-03 12:09:55 PST
``` ASSERTION FAILED: m_platformPath /Source/WebCore/platform/graphics/cg/PathCG.cpp(372) : WebCore::PathCG::PathCG(RetainPtr<CGMutablePathRef> &&) ```
Abrar Rahman Protyasha
Comment 8
2026-02-03 13:23:26 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57806
EWS
Comment 9
2026-02-03 17:58:53 PST
Committed
306747@main
(c782e71fab89): <
https://commits.webkit.org/306747@main
> Reviewed commits have been landed. Closing PR #57806 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug