Cherry-pick c782e71fab89. rdar://169600392

REGRESSION (305692@main): [WK1] ASSERTION FAILED: Constant crash under PlatformCALayerCocoa::shadowPath() on multiple tests
    https://bugs.webkit.org/show_bug.cgi?id=306890
    rdar://169548155

    Reviewed by Wenson Hsieh, Alexey Proskuryakov, and Tim Horton.

    At least the following tests:

    - css3/filters/backdrop/backdrop-filter-with-reflection.html
    - compositing/reflections/direct-image-object-fit-reflected.html

    are crashing due to this assertion failure:

    ```
    ASSERTION FAILED: m_platformPath
    /Source/WebCore/platform/graphics/cg/PathCG.cpp(372) : WebCore::PathCG::PathCG(RetainPtr<CGMutablePathRef> &&)
    ```

    ... following 305692@main. This assertion is harmless because it does
    not hurt for us to clone a platform layer with a null shadow path.
    However, PathCG construction has an existing assertion against null
    CGPathRef arguments.

    In this patch, we recover test coverage by simply not copying a shadow
    path if the original platform layer's shadow path is nil.

    * Source/WebCore/platform/graphics/ca/cocoa/PlatformCALayerCocoa.mm:
    (WebCore::PlatformCALayerCocoa::clone const):

    Canonical link: https://commits.webkit.org/306747@main

Identifier: 305413.254@safari-7624-branch